ingress/wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-cluster-issuer'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec: 
  tls:
  - hosts:
    - wordpress.waiyanpyaesone.xyz
    secretName: nginx-ingress-tls
  rules:
  - host: wordpress.waiyanpyaesone.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
